fixed horizontal scrolling

--- a/navigation-bar/css/custom-style.css
+++ b/navigation-bar/css/custom-style.css
@@ -8,7 +8,6 @@ body {
 nav {
   width: 100%;
   height: 80px;
-  padding-left: 20px;
   background-color: #990033;
 }
 ul {
